--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "config": "^3.3.1",
     "express": "^4.17.1",
+    "fawn": "^2.1.5",
     "joi": "^13.1.0",
     "mongoose": "^5.0.2"
   }
