--- a/package.json
+++ b/package.json
@@ -13,11 +13,14 @@
     "bcrypt": "^3.0.6",
     "config": "^3.3.1",
     "express": "^4.17.1",
+    "express-async-errors": "^2.1.0",
     "fawn": "^2.1.5",
     "joi": "^13.1.0",
     "joi-objectid": "^2.0.0",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.4",
-    "mongoose": "^5.0.2"
+    "mongoose": "^5.0.2",
+    "winston": "^2.4.0",
+    "winston-mongodb": "^3.0.0"
   }
 }
