--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
     "test": "jest --watchAll --verbose --coverage",
     "start": "node index.js"
   },
+  "engines": {
+    "node": "12.18.3"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
